updated SwaggerUI schema
